Fixed sidebar background colour not showing on mobile

--- a/less/theme.less
+++ b/less/theme.less
@@ -90,7 +90,6 @@ body {
     @media @bp-global-small {
         position: static;
         width: auto;
-        background-color: transparent;
     }
 }
 
@@ -471,10 +470,10 @@ body {
 
 .template-header {
 
-    box-shadow: inset -2px 0px 0px 0px darken(@color__body--background, 6%);
+    box-shadow: inset -2px 0px 0px 0px darken(@color__sidebar--background, 6%);
 
     @media @bp-global-small {
-        border-bottom: 1px solid darken(@color__body--background, 6%);
+        border-bottom: 1px solid darken(@color__sidebar--background, 6%);
         box-shadow: none;
     }
 
